# groupme-download-rust

./: Cargo.toml  LICENSE
.github/workflows/: release.yml
src/: cache.rs  client.rs  config.rs  main.rs  model.rs
