[package]
publish = false
name = "groupme-download-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "env", "string"] }
crossterm = "0.29.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
miette = { version = "7.5.0", features = ["fancy"] }
reqwest = { version = "0.12.15", features = ["json"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
